<resources>
    <string name="app_name">EasyTowUser</string>
    <string name="login_hint">Mobile Number</string>
    <string name="login">Login</string>
    <string name="otp">OTP Number</string>
    <string name="next">NEXT</string>
    <string name="resend">RESEND</string>
    <string name="otpEmpty">PLEASE ENTER OTP</string>
    <string name="otpWrong">INVALID OTP</string>
    <string name="pay_bill">PAY</string>
    <string name="pay">Pay</string>
    <string name="locate">Locate</string>
    <string name="time">PICK_TIME</string>
    <string name="date">Pick_Date</string>
    <string name="vehicle_number">Vehicle_number</string>
    <string name="fine">FINE</string>
    <string name="profile_name">PROFILE</string>
    <string name="mobile_number">MOBILE_NUMBER</string>
    <string name="save">SAVE</string>
    <string name="NOITEMFOUND">NO VEHICLE TOWED</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default</string>
    <string name="default_info_snippet">defualt_snippet</string>
    <string name="pick_place">pick place</string>
    <string name="status">DPAID</string>
    <string name="Rs">\u20B9</string>
    <string name="vehicle_owner_name">Vehicle owner name</string>

</resources>
