<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum="100"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/sr_no"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ellipsize="start"
        android:textColor="@color/black"
        android:singleLine="true"
        tools:text="1234234234234" />


    <LinearLayout
        android:layout_weight="100"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vehicle_number_history"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_font_size"
            tools:text="@string/vehicle_number" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:layout_gravity="left"
            android:text="@string/date" />

            <TextView
                android:id="@+id/time_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black"
                android:layout_gravity="left"
                android:text="@string/time" />


        </LinearLayout>


        <TextView
            android:id="@+id/fine_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textColor="@color/black"
            android:padding="5dp"
            android:text="@string/fine" />

        <TextView
            android:id="@+id/status_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="5dp"
            android:layout_gravity="left"
            android:text="@string/status" />

    </LinearLayout>


</LinearLayout>

