<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttonColor"
    android:id="@+id/otp_fragment">

        <ImageView
            android:id="@+id/project"
            android:paddingTop="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/tow_truck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



        <EditText
            android:id="@+id/otp_number"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/otp"
            android:inputType="number"
            android:paddingTop="100dp"
            android:textColorHint="@color/black"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:maxLength="7"
            android:layout_below="@id/project"/>


        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/otp_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


        <Button
            android:id="@+id/next_button"
            android:layout_margin="10dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/next"
            android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/resend_button"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimary"
                android:text="@string/resend" />

        </LinearLayout>


</RelativeLayout>